// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependent resource 1`] = `
"{
  \\"data\\": {
    \\"test_data_source\\": {
      \\"data_source\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"depends_on\\": [
          \\"data.test_data_source.data_source\\"
        ],
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`do not change capitalization of arbritary nested types 1`] = `
"{
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"nested_type\\": {
          \\"Tag\\": \\"isDowncased\\"
        }
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`do not change capitalization of tags 1`] = `
"{
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"tags\\": {
          \\"Tag\\": \\"isWorking\\"
        }
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`numeric attributes 1`] = `
"{
  \\"output\\": {
    \\"combined-string-number\\": {
      \\"value\\": \\"\${test_resource.resource.string_value} / 23.324 / \${test_resource.resource.numeric_value} / 42\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`provider setter 1`] = `
"{
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`serialize list interpolation 1`] = `
"{
  \\"provider\\": {
    \\"other\\": [
      {}
    ],
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"other_test_resource\\": {
      \\"othertest\\": {}
    },
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"names\\": \\"\${other_test_resource.othertest.names}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"other\\": {
        \\"version\\": \\"~> 2.0\\"
      },
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with complex computed list 1`] = `
"{
  \\"provider\\": {
    \\"other\\": [
      {}
    ],
    \\"test\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"other_test_resource\\": {
      \\"othertest\\": {}
    },
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"\${other_test_resource.othertest.complex_computed_list.0.id}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"other\\": {
        \\"version\\": \\"~> 2.0\\"
      },
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`with provider alias 1`] = `
"{
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      },
      {
        \\"access_key\\": \\"123\\",
        \\"alias\\": \\"foo\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test.foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;
